Edit about, index and others

--- a/app/about.njk
+++ b/app/about.njk
@@ -79,8 +79,8 @@
 							  		Co-Founder, Business and Product Development
 							  	</p>
 							  	<div class="item__social-link">
-							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Ajeng's Twitter"></a>
-							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Ajeng's Linkedin"></a>
+							  		<a target="blank" href="https://twitter.com/diahajengdwi"><img src="images/twitter.svg" alt="Ajeng's Twitter"></a>
+							  		<a target="blank" href="https://www.linkedin.com/in/diahajengdwi/"><img src="images/linkedin.svg" alt="Ajeng's Linkedin"></a>
 							  	</div>
 							</div>
 						</div>
@@ -96,8 +96,8 @@
 							  		Co-Founder, Creative Director
 							  	</p>
 							  	<div class="item__social-link">
-							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Afnizar's Twitter"></a>
-							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Afnizar's Linkedin"></a>
+							  		<a target="blank" href="https://twitter.com/afnizarnur"><img src="images/twitter.svg" alt="Afnizar's Twitter"></a>
+							  		<a target="blank" href="https://www.linkedin.com/in/afnizarnur/"><img src="images/linkedin.svg" alt="Afnizar's Linkedin"></a>
 							  	</div>
 						  	</div>
 						</div>
@@ -113,8 +113,8 @@
 							  		Co-Founder, Business and Product Development
 							  	</p>
 							  	<div class="item__social-link">
-							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Febry's Twitter"></a>
-							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Febry's Linkedin"></a>
+							  		<a target="blank" href="https://twitter.com/febry_ghaisani"><img src="images/twitter.svg" alt="Febry's Twitter"></a>
+							  		<a target="blank" href="https://www.linkedin.com/in/febry-ghaisani-85b0a514b/"><img src="images/linkedin.svg" alt="Febry's Linkedin"></a>
 							  	</div>
 							</div>
 						</div>
@@ -130,8 +130,8 @@
 							  		VP Engineering
 							  	</p>
 							  	<div class="item__social-link">
-							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Kukuh's Twitter"></a>
-							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Kukuh's Linkedin"></a>
+							  		<a target="blank" href="https://twitter.com/sulistyo_kukuh"><img src="images/twitter.svg" alt="Kukuh's Twitter"></a>
+							  		<a target="blank" href="https://www.linkedin.com/in/kukuh-aji-sulistyo-5baa6012b/"><img src="images/linkedin.svg" alt="Kukuh's Linkedin"></a>
 							  	</div>
 							</div>
 						</div>
@@ -147,8 +147,8 @@
 							  		UI/UX Strategist
 							  	</p>
 							  	<div class="item__social-link">
-							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Rike's Twitter"></a>
-							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Rike's Linkedin"></a>
+							  		<a target="blank" href="https://twitter.com/capmaniachelsea"><img src="images/twitter.svg" alt="Rike's Twitter"></a>
+							  		<a target="blank" href="https://www.linkedin.com/in/rike-adelia-205988123/"><img src="images/linkedin.svg" alt="Rike's Linkedin"></a>
 							  	</div>
 							</div>
 						</div>
@@ -161,11 +161,11 @@
 							   		Setyo Nugroho
 							  	</p>
 							  	<p class="item__sub-text">
-							  		Chief Technology Officer
+							  		Software Engineer
 							  	</p>
 							  	<div class="item__social-link">
-							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Setyo's Twitter"></a>
-							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Setyo's Linkedin"></a>
+							  		<a target="blank" href="https://twitter.com/setyongr"><img src="images/twitter.svg" alt="Setyo's Twitter"></a>
+							  		<a target="blank" href="https://www.linkedin.com/in/setyongr/"><img src="images/linkedin.svg" alt="Setyo's Linkedin"></a>
 							  	</div>
 							</div>
 						</div>
