--- a/app/index.njk
+++ b/app/index.njk
@@ -21,7 +21,7 @@
 	    	<div class="row section transparent">
 	    		<div class="container">
 		        	<div class="col-xs-12">
-				        <a href="#" class="hunk hunk--small hunk--left">
+				        <a href="" class="hunk hunk--small hunk--left">
 				        	<div class="hunk__inner">
 					        	<img src="images/aslan.png" class="hunk__img" alt="Application Aslan">
 				    			<div class="hunk__label">
@@ -30,7 +30,7 @@
 				    			</div>
 			    			</div>
 				        </a>
-				        <a href="#" class="hunk hunk--medium hunk--v-strecth-2 pull-right">
+				        <a href="" class="hunk hunk--medium hunk--v-strecth-2 pull-right">
 				        	<div class="hunk__inner">
 					        	<img src="images/labanfarma.png" class="hunk__img" alt="Project Laban Farma">
 				    			<div class="hunk__label">
@@ -39,7 +39,7 @@
 				    			</div>
 				    		</div>
 				        </a>
-				        <a href="#" class="hunk hunk--small">
+				        <a href="" class="hunk hunk--small">
 				        	<div class="hunk__inner">
 					        	<img src="images/nawarin.png" class="hunk__img" alt="Project Nawar.in">
 				    			<div class="hunk__label">
@@ -137,7 +137,7 @@
 				        	Quote
 				        </blockquote>
 				        <p class="profil">
-					        <img src="images/avatar.png">
+					        <img src="images/default-avatar.png" alt="image">
 				        	Name
 				        </p>
 			        </div>
