--- a/app/nunjucks/default.njk
+++ b/app/nunjucks/default.njk
@@ -4,11 +4,10 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Dream Akasa</title>
-          {# {% if page == 'index' %} Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
-          {# {% if page == 'about' %} Who are we? | Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
-          {# {% if page == 'services' %} What can we help you with? | Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
-          {# {% if page == 'Interested with us?' %} What can we help you with? | Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
+        <title>
+        {{ title }}
+        {% set title = "Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach." %}
+        {{ title }}
         </title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
