--- a/app/contact.njk
+++ b/app/contact.njk
@@ -1,7 +1,10 @@
+
+{% set page = "contact" %} 
+{% set title = "What can we help you with? | " %} 
+
 {% extends "nunjucks/default.njk" %}
     {% block content %}
-    {% import "nunjucks/partials/navbar.njk" as navbar %}
-	{{ navbar.activePage('contact') }}
+    {% include "nunjucks/partials/navbar.njk" %}
 
     	<div class="container-fluid main-container">
       	<div class="row section section--banner text-center transparent">
