--- a/app/contact.njk
+++ b/app/contact.njk
@@ -1,6 +1,6 @@
 
 {% set page = "contact" %} 
-{% set title = "What can we help you with? | " %} 
+{% set title = "Interested with us? | " %} 
 
 {% extends "nunjucks/default.njk" %}
     {% block content %}
