--- a/app/about.njk
+++ b/app/about.njk
@@ -113,7 +113,7 @@
 							  		Co-Founder, Business and Product Development
 							  	</p>
 							  	<div class="item__social-link">
-							  		<a target="blank" href="https://twitter.com/febry_ghaisani"><img src="images/twitter.svg" alt="Febry's Twitter"></a>
+							  		<a target="blank" href="https://twitter.com/febryghaisani"><img src="images/twitter.svg" alt="Febry's Twitter"></a>
 							  		<a target="blank" href="https://www.linkedin.com/in/febry-ghaisani-85b0a514b/"><img src="images/linkedin.svg" alt="Febry's Linkedin"></a>
 							  	</div>
 							</div>
