Update many things

--- a/app/index.njk
+++ b/app/index.njk
@@ -1,5 +1,5 @@
 
-{% set page = "index" %} 
+{% set page = "index" %}
 
 {% extends "nunjucks/default.njk" %}
     {% block content %}
@@ -136,7 +136,7 @@
 	    		<div class="container">
 		      		<div class="col-sm-12">
 				        <blockquote>
-				        	Quote
+				        	"Quote"
 				        </blockquote>
 				        <p class="profil">
 					        <img src="images/default-avatar.png" alt="image">
