--- a/app/nunjucks/partials/footer.njk
+++ b/app/nunjucks/partials/footer.njk
@@ -25,7 +25,7 @@
 	      		<div class="footer__nav col-sm-12 border-t-blue clearfix">
 					<ul class="list-group list-inline pull-left list-group--flush ">
 					   <li class="list-group-item">&copy; 2017 Dream Akasa</li>
-					   <li class="list-group-item">+62 8761 12121 <span>/</span> <a href="http://localhost:9001/contact.html">Contact Us</a></li>
+					   <li class="list-group-item">+62 877 36923163 <span>/</span> <a href="http://localhost:9001/contact.html">Contact Us</a></li>
 					</ul>
 					<ul class="list-group list-inline pull-right list-group--flush">
 					   <li class="list-group-item"><a target="blank" href="https://www.facebook.com/dreamakasa"><i class="fa fa-facebook-official"></i></a></li>
