--- a/app/services.njk
+++ b/app/services.njk
@@ -1,6 +1,6 @@
 
 {% set page = "services" %}
-{% set title = "Services | " %} 
+{% set title = "Services | " %}
 
 {% extends "nunjucks/default.njk" %}
     {% block content %}
@@ -88,28 +88,28 @@
                 	<div class="carousel-inner" role="listbox">
 	                    <div class="item active">
 	                        <div class="carousel-caption">
-	                        	<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad finem.</blockquote>
+	                        	<blockquote>We trust Dream Akasa with all our design & development projects and are very happy working together.</blockquote>
 	                        	<p class="profil">
-							        <img src="images/avatar.png">
-						        	John Sigh
+							        <img src="images/default-avatar.png">
+						        	Carl Carlson
 						        </p>
 					        </div>
 	                    </div>
 	                    <div class="item">
 	                      	<div class="carousel-caption">
-	                        	<blockquote>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, Tars!.</blockquote>
+	                        	<blockquote>Young talented team! The quality work and friendliness is why I chose to work with Dream Akasa.</blockquote>
 	                        	<p class="profil">
-							        <img src="images/avatar.png">
-						        	Keegan Turkova
+							        <img src="images/default-avatar.png">
+						        	Arron Montgomery
 						        </p>
 					        </div>
                     	</div>
                     	<div class="item">
 	                      	 <div class="carousel-caption">
-	                        	<blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elitaboris nisi ut aliquip ex ea commodo consequat.</blockquote>
+	                        	<blockquote>Dream akasa help us doing usability test for our <i>stealth</i> startup app. The result is really well and detail!</blockquote>
 	                        	<p class="profil">
-							        <img src="images/avatar.png">
-						        	Jamilee Suyitna
+							        <img src="images/default-avatar.png">
+						        	Tracey Carlson
 						        </p>
 					        </div>
                     	</div>
