Update quotes and services

--- a/app/services.njk
+++ b/app/services.njk
@@ -97,7 +97,7 @@
 	                    </div>
 	                    <div class="item">
 	                      	<div class="carousel-caption">
-	                        	<blockquote>Young talented team! The quality work and friendliness is why I chose to work with Dream Akasa.</blockquote>
+	                        	<blockquote>Dream akasa help us to design and develop for our company application. Their response and work is really great! Very recommended to work.</blockquote>
 	                        	<p class="profil">
 							        <img src="images/default-avatar.png">
 						        	Arron Montgomery
